--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -10,10 +10,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: bufbuild/buf-setup-action@v1
       - uses: bufbuild/buf-lint-action@v1
+        with:
+          input: "paymentapis"
       - uses: bufbuild/buf-breaking-action@v1
         with:
           # The 'main' branch of the GitHub repository that defines the module.
           against: "https://github.com/FintrackOrg/fintrack-protos.git#branch=main,ref=HEAD~1"
+          input: "paymentapis"
       - uses: bufbuild/buf-push-action@v1
         with:
+          input: "paymentapis"
           buf_token: ${{ secrets.BUF_TOKEN }}
