--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -11,13 +11,13 @@ jobs:
       - uses: bufbuild/buf-setup-action@v1
       - uses: bufbuild/buf-lint-action@v1
         with:
-          input: "paymentapis"
+          input: "fintrackapis"
       - uses: bufbuild/buf-breaking-action@v1
         with:
           # The 'main' branch of the GitHub repository that defines the module.
           against: "https://github.com/FintrackOrg/fintrack-protos.git#branch=main,ref=HEAD~1"
-          input: "paymentapis"
+          input: "fintrackapis"
       - uses: bufbuild/buf-push-action@v1
         with:
-          input: "paymentapis"
+          input: "fintrackapis"
           buf_token: ${{ secrets.BUF_TOKEN }}
